# sentry_aim_26

./: .clang-format  .clang-tidy  .cz-config.js  .gitignore  CMakeLists.txt  GPU_SETUP_COMPLETE.md  README.md  debug_model_output.py  main.cpp  main_backup.cpp  main_broken.cpp  main_fixed.cpp  main_new.cpp  refactor.md  run_gpu.sh  run_with_gpu.sh  test.py  test_display.cpp  vcpkg.json  verify_gpu.py
.github/workflows/: ci.yml
base/math/: math.cpp  math.hpp
base/math/filter/: adaptive_extended_kalman_filter.hpp  error_state_extended_kalman_filter.hpp  extended_kalman_filter.hpp  unscented_kalman_filter.hpp
config/: camera_info.yaml  camera_info_demo.yaml  camera_params.yaml  detection_config.toml  detector_config.yaml  pose_config.toml  tracker_config.yaml
env/: work_space.sh
include/auto_aim/: pnp_solver.hpp  type.hpp
include/auto_aim/aim_solver/: aim_solver.hpp
include/auto_aim/armor_detector/: detector.hpp  detector_factory.hpp  ncnn_detector.hpp  onnxruntime_detector.hpp  openvino_detector.hpp  pnp_solver.hpp  tensorrt_detector.hpp  yolo_detector.hpp
include/auto_aim/armor_solver/: solver.hpp
include/auto_aim/armor_tracker/: tracker.hpp
include/auto_aim/pipeline/: pipeline.hpp
include/auto_aim/runtime/: state.hpp
include/auto_aim/target_selector/: target_selector.hpp
include/auto_aim/transform/: transform.hpp
include/concurrency/: thread_pool.hpp
include/io/: camera.hpp
include/sentry_aim_26/camera/galaxy_camera/: galaxy_camera.hpp
include/sentry_aim_26/detector/: detector.hpp
include/utils/: plotjuggler_udp.hpp
include/utils/logger/: logger.hpp
include/utils/mathmatic/: angles.h  extended_kalman_filter.hpp  unsctend_kalmen_filter.hpp
scripts/: benchmark_onnx.sh  install-hooks.sh  lint.sh
src/camera/galaxy_camera/: galaxy_camera.cpp
src/detector/: detector.cpp
src/utils/: CMakeLists.txt
src/utils/logger/: logger.cpp  logger.hpp
src/utils/mathmatic/: extended_kalman_filter.cpp
task/: CMakeLists.txt
task/auto_aim/: detector_impl.cpp
tasks/: CMakeLists.txt
tasks/auto_aim/: pnp_solver_impl.cpp  type.hpp
tasks/auto_aim/aim_solver/: aim_solver.cpp
tasks/auto_aim/armor_detector/: detector_impl.cpp  ncnn_detector.cpp  onnxruntime_detector.cpp  openvino_detector.cpp  tensorrt_detector.cpp  yolo_detector.cpp
tasks/auto_aim/armor_solver/: solver.cpp
tasks/auto_aim/armor_tracker/: tracker.cpp
tasks/auto_aim/pipeline/: pipeline.cpp
tasks/auto_aim/target_selector/: target_selector.cpp
tasks/auto_aim/transform/: transform.cpp
test/: test_video.cpp  test_video_backup.cpp  test_video_fixed.cpp  test_video_producer_consumer.cpp  test_video_threaded.cpp  test_video_threaded_fixed.cpp
tests/: CMakeLists.txt  armor_detector_test.cpp  armor_solver_test.cpp  auto_aim_pipeline_smoke_test.cpp  auto_aim_pipeline_test.cpp  filter_test.cpp  logger_module_test.cpp  pnp_solver_unit_test.cpp  pnp_test.cpp  thread_pool_test.cpp  transform_test.cpp
